[project]
name = "kharkiv-metro"
version = "0.1.0"
description = "Kharkiv Metro Route Planner - monorepo workspace"
authors = [{name = "User", email = "user@example.com"}]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
kharkiv-metro-core = { workspace = true }
kharkiv-metro-cli = { workspace = true }
kharkiv-metro-bot = { workspace = true }
kharkiv-metro-mcp = { workspace = true }

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
