[project]
name = "kharkiv-metro"
version = "0.1.0"
description = "Kharkiv Metro Route Planner - monorepo workspace"
authors = [{name = "beauloxe", email = "beauloxe@proton.me"}]
requires-python = ">=3.11"

# Meta-package: depends on all workspace packages
dependencies = [
    "kharkiv-metro-core",
    "kharkiv-metro-cli",
]

[project.optional-dependencies]
# Individual components
bot = ["kharkiv-metro-bot"]
mcp = ["kharkiv-metro-mcp"]

# All components
all = [
    "kharkiv-metro-core",
    "kharkiv-metro-cli",
    "kharkiv-metro-bot",
    "kharkiv-metro-mcp",
]

[project.scripts]
# Expose scripts from sub-packages at top level
metro = "kharkiv_metro_cli.main:cli"
metro-bot = "kharkiv_metro_bot.main:main_sync"
metro-mcp = "kharkiv_metro_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/kharkiv_metro_cli", "packages/kharkiv_metro_bot", "packages/kharkiv_metro_mcp"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
kharkiv-metro-core = { workspace = true }
kharkiv-metro-cli = { workspace = true }
kharkiv-metro-bot = { workspace = true }
kharkiv-metro-mcp = { workspace = true }

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
